<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bottom_sheet"
    android:background="@color/white"
    style="@style/Animation.Design.BottomSheetDialog"
    app:behavior_hideable="false"
    app:behavior_peekHeight="32dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    >

    <EditText
        android:id="@+id/editTextTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:hint="E.g..Write task"
        android:inputType="textPersonName"
        android:padding="@dimen/dimen_16"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/calendar_button"
        android:layout_width="74dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/image_description"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTask"
        app:srcCompat="@drawable/ic_baseline_calendar_today_24" />

    <ImageButton
        android:id="@+id/time_button"
        android:layout_width="77dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toEndOf="@+id/calendar_button"
        app:layout_constraintTop_toBottomOf="@+id/editTextTask"
        app:srcCompat="@drawable/ic_baseline_access_time_24"
        android:contentDescription="@string/image_description" />

    <ImageButton
        android:id="@+id/save_todo_button"
        android:layout_width="77dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:scaleX="0.4"
        android:scaleY="0.4"
        android:contentDescription="@string/task_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toEndOf="@+id/time_button"
        app:layout_constraintTop_toBottomOf="@+id/editTextTask"
        app:srcCompat="@drawable/check" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="244dp"
        android:layout_height="33dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:text="@string/due_date_text"
        android:textSize="16sp"
        android:textAlignment="center"
        android:background="@drawable/custom_texview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_button" />

    <com.google.android.material.chip.Chip
        android:id="@+id/today_chip"
        android:layout_width="267dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:text="@string/today"
        app:chipIcon="@drawable/ic_baseline_today_24"
        app:layout_constraintEnd_toEndOf="@+id/tomorrow_chip"
        app:layout_constraintStart_toStartOf="@+id/tomorrow_chip"
        app:layout_constraintTop_toBottomOf="@+id/textViewDate" />

    <com.google.android.material.chip.Chip
        android:id="@+id/tomorrow_chip"
        android:layout_width="269dp"
        android:layout_height="41dp"
        android:text="@string/tomorrow"
        app:chipIcon="@drawable/ic_baseline_wb_sunny_24"
        app:layout_constraintEnd_toEndOf="@+id/next_week_chip"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/next_week_chip"
        app:layout_constraintTop_toBottomOf="@+id/today_chip" />

    <com.google.android.material.chip.Chip
        android:id="@+id/next_week_chip"
        android:layout_width="272dp"
        android:layout_height="44dp"
        android:layout_marginBottom="0dp"
        android:background="@android:color/transparent"
        android:text="@string/next_week"
        app:chipIcon="@drawable/ic_baseline_next_week_24"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tomorrow_chip" />

    <CalendarView
        android:id="@+id/calendar_view"
        android:layout_width="318dp"
        android:layout_height="296dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_week_chip"
        app:layout_constraintVertical_bias="0.16000003" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/calendar_group"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="calendar_view,next_week_chip,tomorrow_chip,today_chip,textViewDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


<!-- Time Picker-->

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="244dp"
        android:layout_height="33dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="Due Time"
        android:textSize="16sp"
        android:textAlignment="center"
        android:background="@drawable/custom_texview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_button" />

    <TimePicker
        android:id="@+id/time_pickerView"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTime"
        app:layout_constraintVertical_bias="0.16000003" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/time_group"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="time_pickerView, textViewTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>